--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-celery-beat==2.7.0
 django-redis==5.4.0
 gunicorn==20.1.0
 psycopg2==2.9.10
+pysocks==1.7.1
 redis==5.2.0
 requests==2.32.5
 Telethon==1.40.0
