--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,6 @@ jobs:
       with:
         name: khvostenko/tgclient
         username: khvostenko
-        password: Cnhfyybr1@
+        password: ${{ secrets.DOCKER_PASSWORD }}
         tags: latest
         dockerfile: Dockerfile
